--- a/tourism.html
+++ b/tourism.html
@@ -21,30 +21,27 @@
     <!-- start header -->
     <header>
       <div class="container">
-        <div class="logo"></div>
-        <a href="#" class="logo">
-          <img decoding="async" src="././images/logo.png" alt="Logo" />
-        </a>
-        <p>
-          Alsayed <br />
-          Tourism & Travel
-        </p>
         <nav>
           <i class="fas fa-bars toggle-menu"></i>
           <ul>
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a class="active" href="#">الصفحة الرئيسية</a></li>
+            <li><a href="#services">خدماتنا</a></li>
+            <li><a href="#portfolio">رحلاتنا</a></li>
+            <li><a href="#contact">تواصل معنا</a></li>
           </ul>
-          <div class="form">
-            <i class="fas fa-search"></i>
-          </div>
         </nav>
+        <div class="logo">
+          <a href="#" class="logo">
+            <img
+              decoding="async"
+              src="././images/LogoSample_ByTailorBrands.jpg"
+              alt="Logo"
+            />
+          </a>
+        </div>
       </div>
     </header>
+    <!-- End header -->
     <script src="tourism.js"></script>
   </body>
 </html>
