End video section

--- a/tourism.html
+++ b/tourism.html
@@ -42,6 +42,26 @@
       </div>
     </header>
     <!-- End header -->
+    <!-- Start video section -->
+    <div class="video">
+      <video
+        preload="auto"
+        muted
+        autoplay
+        src="./images/pexels-roman-odintsov-6543352 (2160p).mp4"
+      ></video>
+      <div class="text">
+        <p>مرحبا بكم في</p>
+        <h2>السيَّد للسياحة والسفر</h2>
+        <a href="#about">من نحن</a>
+      </div>
+    </div>
+    <div class="whatsapp">
+      <a href=""
+        ><i class="fa-brands fa-whatsapp fa-2xl" style="color: #fff"></i
+      ></a>
+    </div>
+    <!-- End video section -->
     <script src="tourism.js"></script>
   </body>
 </html>
