change video to images, for slow internet connection

--- a/tourism.html
+++ b/tourism.html
@@ -42,14 +42,12 @@
       </div>
     </header>
     <!-- End header -->
-    <!-- Start video section -->
-    <div class="video">
-      <video
-        preload="auto"
-        muted
-        autoplay
-        src="./images/pexels-roman-odintsov-6543352 (2160p).mp4"
-      ></video>
+    <!-- Start images section -->
+    <div class="images">
+      <img 
+      loading="lazy"
+        src="./images/1.jpg"
+      ></img>
       <div class="text">
         <p>مرحبا بكم في</p>
         <h2>السيَّد للسياحة والسفر</h2>
@@ -61,7 +59,7 @@
         ><i class="fa-brands fa-whatsapp fa-2xl" style="color: #fff"></i
       ></a>
     </div>
-    <!-- End video section -->
+    <!-- End images section -->
     <script src="tourism.js"></script>
   </body>
 </html>
