make about section

--- a/tourism.html
+++ b/tourism.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./css/magic.min.css" />
   </head>
   <body>
     <!-- start header -->
@@ -109,7 +110,27 @@
     <!-- End slider section -->
 
     <!-- Start about section -->
-
+    <div class="about">
+      <div class="container">
+        <div class="image-1"><img src="./images/7.webp" alt="Turkey" /></div>
+        <div class="text">
+          <p>من نحن</p>
+          <h3>السيَّد للسياحة والسفر</h3>
+          <p>
+            <q>
+              في عالم الاستكشاف والأحلام، تبرز شركة السيِّد للسياحة والسفر كشعاع
+              منير يضيء سماء تركيا. نحن لسنا مجرد شركة سياحية، بل نحن قصة تعبير
+              عن الجمال والمغامرة، حيث نحوّل الأماني إلى وجهات حقيقية. بين
+              أيدينا، يتحقق كل حلم للمسافرين الوافدين إلى تركيا، حيث نقدم
+              ترتيبات رحلات متقنة تشمل تجربة حجز فنادق راقية واستئجار سيارات
+              مريحة، ومجموعة من الخدمات الفريدة. في ساحة المنافسة، نتحدى العادات
+              ونسعى لتحقيق التميز، لنبقى شركة الخيار الأمثل لرحلتك إلى جمال
+              تركيا.</q
+            >
+          </p>
+        </div>
+      </div>
+    </div>
     <!-- End about section -->
 
     <!-- Swiper Library -->
