finish services section

--- a/tourism.html
+++ b/tourism.html
@@ -102,15 +102,14 @@
       </div>
     </section>
 
-    <div class="whatsapp">
-      <a href="https://wa.me/+905342081788" target="_blank">
-        <i class="fab fa-whatsapp fa-2xl" style="color: #fff"></i>
-      </a>
-    </div>
+    <a href="https://wa.me/+905342081788" target="_blank" class="whatsapp">
+      <i class="fab fa-whatsapp fa-2xl" style="color: #fff"></i>
+    </a>
+
     <!-- End slider section -->
 
     <!-- Start about section -->
-    <div class="about">
+    <div class="about" id="about">
       <div class="container">
         <div class="image-1"><img src="./images/7.webp" alt="Turkey" /></div>
         <div class="text">
@@ -118,7 +117,7 @@
           <h3>السيَّد للسياحة والسفر</h3>
           <p>
             <q>
-              في عالم الاستكشاف والأحلام، تبرز شركة السيِّد للسياحة والسفر كشعاع
+              في عالم الاستكشاف والأحلام، تبرز شركة السيَّد للسياحة والسفر كشعاع
               منير يضيء سماء تركيا. نحن لسنا مجرد شركة سياحية، بل نحن قصة تعبير
               عن الجمال والمغامرة، حيث نحوّل الأماني إلى وجهات حقيقية. بين
               أيدينا، يتحقق كل حلم للمسافرين الوافدين إلى تركيا، حيث نقدم
@@ -132,6 +131,32 @@
       </div>
     </div>
     <!-- End about section -->
+    <!-- Start service section  -->
+    <div class="service">
+      <p>خدماتنا</p>
+      <div class="serv">
+        <a href="#home" class="srv">
+          <i
+            class="fa-solid fa-earth-americas fa-2xl"
+            style="color: #a70606"
+          ></i>
+          <h3>رحلات يومية</h3>
+        </a>
+        <a href="#home" class="srv">
+          <i class="fa-solid fa-hotel fa-2xl" style="color: #a70606"></i>
+          <h3>حجز فنادق</h3>
+        </a>
+        <a href="#home" class="srv">
+          <i class="fa-solid fa-car-rear fa-2xl" style="color: #a70606"></i>
+          <h3>حجز سيارات</h3>
+        </a>
+        <a href="#home" class="srv">
+          <i class="fa-solid fa-plane fa-2xl" style="color: #a70606"></i>
+          <h3>حجز طيران</h3>
+        </a>
+      </div>
+    </div>
+    <!-- End service section  -->
 
     <!-- Swiper Library -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
