finish services section

--- a/tourism.html
+++ b/tourism.html
@@ -131,7 +131,7 @@
       </div>
     </div>
     <!-- End about section -->
-    <!-- Start service section  -->
+    <!-- Start services section  -->
     <div class="service">
       <p>خدماتنا</p>
       <div class="serv">
@@ -156,7 +156,7 @@
         </a>
       </div>
     </div>
-    <!-- End service section  -->
+    <!-- End services section  -->
 
     <!-- Swiper Library -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
