Finish Our-Travels section

--- a/tourism.html
+++ b/tourism.html
@@ -34,7 +34,7 @@
         <nav>
           <i class="fas fa-bars toggle-menu"></i>
           <ul>
-            <li><a class="active" href="#">الصفحة الرئيسية</a></li>
+            <li><a class="active" href="#" id="home">الصفحة الرئيسية</a></li>
             <li><a href="#services">خدماتنا</a></li>
             <li><a href="#portfolio">رحلاتنا</a></li>
             <li><a href="#contact">تواصل معنا</a></li>
@@ -158,6 +158,160 @@
     </div>
     <!-- End services section  -->
 
+    <!-- Start travels section -->
+    <div class="travels">
+      <div class="container"></div>
+      <h2>رحلاتنا</h2>
+      <div class="boxes">
+        <div class="box">
+          <h3>رحلة سابانجا والمعشوقية</h3>
+          <div class="image-T">
+            <img src="./images/9.webp" alt="sapanci" />
+          </div>
+          <h3>السعر: 200 ليرة</h3>
+          <ul>
+            <li>
+              بحيرة صابنجة الخلابة التي تعتبر من أكبر و أهم البحيرات تركيا
+            </li>
+            <li>زيارة شلالات المعشوقية الساحرة</li>
+            <li>ممارسة بعض الألعاب مثل ال Zipline و المرجوحة الكبيرة</li>
+            <li>رحلة سفاري بالموتورات (دبابات ATV)</li>
+            <li>التراس الزجاجي</li>
+            <li>سنتناول غداءنا بالغابة تحت مظلة من الأشجار</li>
+            <li>ايضا خلال الرحله نقوم بزياره معرض العسل الطبيعي والحلقوم</li>
+            <li>ملاحظة / رسوم الرحلة تشمل المواصلات ووجبة الغداء فقط</li>
+          </ul>
+          <a href="">للحجز والاستفسار</a>
+        </div>
+        <div class="box">
+          <h3>رحلة بورصة</h3>
+          <div class="image-T">
+            <img src="./images/10.webp" alt="sapanci" />
+          </div>
+          <h3>السعر: 225 ليرة</h3>
+          <ul>
+            <li>سوق الحرير والجامع الاخضر</li>
+            <li>فترة غداء عبارة عن مشاوي مشكله</li>
+            <li>ركوب التلفريك المغلق اختياري</li>
+            <li>تجربه موتورات (دباباتATV) الرائعه</li>
+            <li>معرض الحلقوم التركي</li>
+            <li>معرض العسل و المربيات</li>
+            <li>
+              ملاحظة / رسوم الرحلة تشمل المواصلات ووجبة الغداء ولا تشمل او اي
+              نشاطات اخرى خلال الرحلة
+            </li>
+          </ul>
+          <a href="">للحجز والاستفسار</a>
+        </div>
+        <div class="box">
+          <h3>جولة اسطنبول</h3>
+          <div class="image-T">
+            <img src="./images/11.webp" alt="sapanci" />
+          </div>
+          <h3>السعر: 350 ليرة</h3>
+          <ul class="last">
+            <li>
+              تل العرائس (وهي أعلى وأشهر تل في أسطنبول للتمتع بأجمل منظر لمدينه
+              أسطنبول ومضيق البوسفور لأستكشاف قاره أسيا وأوروبا)
+            </li>
+            <li>
+              جوله البوسفور (لنتعرف معا إلى أهم وأشهر المعالم الأثرية والتاريخية
+              والثقافية المطله على ضفاف مضيق البوسفور لألتقاط أجمل الصور وتمتع
+              بوجبه غداء شهي أثناء الأبحار في بحر مرمره بطريق إلى جزر الأميرات)
+            </li>
+            <li>
+              جزيرة الأميرات (وقت حر للتسوق والقيام ببعض النشاطات الاختيارية)
+            </li>
+            <li>السعر : 270 ليرة فقط للشخص يشمل المواصلات و وجبه الغداء</li>
+          </ul>
+          <a href="">للحجز والاستفسار</a>
+        </div>
+        <div class="box">
+          <h3>سهرة البسفور العربية</h3>
+          <div class="image-T">
+            <img src="./images/12.webp" alt="sapanci" />
+          </div>
+          <h3>السعر: 550 ليرة</h3>
+          <ul>
+            <li>سهره البسفور الرائعة , و تكون السهرة على متن السفن العربية</li>
+            <li>السهرة المسائية في مضيق البسفور</li>
+            <li>
+              تبدأ من الساعة 8:00 مساء حتي 12:00 ليلا” يوجد وجبة عشاء مع العروض
+              والفلكلور والمواصلات من والى السهر
+            </li>
+          </ul>
+          <a href="">للحجز والاستفسار</a>
+        </div>
+        <div class="box">
+          <h3>رحلة يالوفا</h3>
+          <div class="image-T">
+            <img src="./images/13.webp" alt="sapanci" />
+          </div>
+          <h3>السعر : 350 ليرة</h3>
+          <ul>
+            <li>شلالات يالوا</li>
+            <li>المياه الكبريتية الحارة</li>
+            <li>الرحلة شاملة</li>
+            <li>النقل من و الى الفندق</li>
+            <li>مرشد عربي</li>
+            <li>وجبة غداء</li>
+            <li></li>
+          </ul>
+
+          <a href="">للحجز والاستفسار</a>
+        </div>
+        <div class="box">
+          <h3>رحلة جزر الاميرات</h3>
+          <div class="image-T">
+            <img src="./images/14.webp" alt="sapanci" />
+          </div>
+          <h3>السعر : 550 ليرة</h3>
+          <ul class="last">
+            <li>الزيارات اثناء الرحلة</li>
+            <li>
+              التوجه لجزيرة الاميرات بواسطة العبارات البحرية لمدة ساعة واربعين
+              دقيقة
+            </li>
+            <li>
+              الوصول والتوجه للقيام بجولة بالسيارة الكهربائية لمدة 25 دقيقة
+            </li>
+            <li>
+              بعدها قضاء ثلاث ساعات للتمتع بالمناظر الخلابة بحزيرة الاميرات
+              والتعرف على الاسواق والمعالم الهامة
+            </li>
+            <li>التجمع وتناول وجبة الغداء باحد مطاعم الجزيرة</li>
+            <li>التجمع والتوجه للصعود الى العبارة البحرية والعودة للفندق</li>
+            <li>السعر يشمل وجبة الغداء والمواصلات و مرشد سياحي عربي</li>
+          </ul>
+          <a href="">للحجز والاستفسار</a>
+        </div>
+        <div class="box">
+          <h3>رحلة ازميت</h3>
+          <div class="image-T">
+            <img src="./images/15.webp" alt="sapanci" />
+          </div>
+          <h3>السعر : 300 ليرة</h3>
+          <ul class="last">
+            <li>الزيارات أثناء الرحلة</li>
+            <li>حديقة الحيوانات</li>
+            <li>مطل القمر المشهور في ازميت</li>
+            <li>جولة السفاري (ATV) داخل الغابات</li>
+            <li>بحيرة سوكاي المشهورة</li>
+            <li>البيت المقلوب Ters Ev</li>
+            <li>زيارة معرض الحلقوم العثماني</li>
+            <li>
+              ملاحظة رسوم حديقة الحيوانات ومتورات السفاري والبيت المقلوب لايشمل
+              سعر الرحلة
+            </li>
+          </ul>
+          <a href="">للحجز والاستفسار</a>
+        </div>
+      </div>
+    </div>
+    <!-- End travels section -->
+    <!-- Start footer  -->
+
+    <!-- End footer  -->
     <!-- Swiper Library -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="tourism.js"></script>
