--- a/tourism.html
+++ b/tourism.html
@@ -310,7 +310,17 @@
     </div>
     <!-- End travels section -->
     <!-- Start footer  -->
-
+    <footer>
+      <div class="container">
+      <div class="icon">  <i class="fa-solid fa-square-phone-flip fa-2xl" style="color: #1fbb6e;"></i></div>
+        <p>أرقام التواصل
+          <p>05342081788</p>
+        </p>
+        <p class="copyright">
+          &copy; 2023 <span>Roban Seyidoglu</span> 
+        </p>
+      </div>
+    </footer>
     <!-- End footer  -->
     <!-- Swiper Library -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
