update a tags and links

--- a/tourism.html
+++ b/tourism.html
@@ -132,7 +132,7 @@
     </div>
     <!-- End about section -->
     <!-- Start services section  -->
-    <div class="service">
+    <div id="services" class="service">
       <p>خدماتنا</p>
       <div class="serv">
         <a href="#home" class="srv">
@@ -159,7 +159,7 @@
     <!-- End services section  -->
 
     <!-- Start travels section -->
-    <div class="travels">
+    <div id="portfolio" class="travels">
       <div class="container"></div>
       <h2>رحلاتنا</h2>
       <div class="boxes">
@@ -181,7 +181,9 @@
             <li>ايضا خلال الرحله نقوم بزياره معرض العسل الطبيعي والحلقوم</li>
             <li>ملاحظة / رسوم الرحلة تشمل المواصلات ووجبة الغداء فقط</li>
           </ul>
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
         <div class="box">
           <h3>رحلة بورصة</h3>
@@ -201,7 +203,9 @@
               نشاطات اخرى خلال الرحلة
             </li>
           </ul>
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
         <div class="box">
           <h3>جولة اسطنبول</h3>
@@ -224,7 +228,9 @@
             </li>
             <li>السعر : 270 ليرة فقط للشخص يشمل المواصلات و وجبه الغداء</li>
           </ul>
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
         <div class="box">
           <h3>سهرة البسفور العربية</h3>
@@ -240,7 +246,9 @@
               والفلكلور والمواصلات من والى السهر
             </li>
           </ul>
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
         <div class="box">
           <h3>رحلة يالوفا</h3>
@@ -258,7 +266,9 @@
             <li></li>
           </ul>
 
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
         <div class="box">
           <h3>رحلة جزر الاميرات</h3>
@@ -283,7 +293,9 @@
             <li>التجمع والتوجه للصعود الى العبارة البحرية والعودة للفندق</li>
             <li>السعر يشمل وجبة الغداء والمواصلات و مرشد سياحي عربي</li>
           </ul>
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
         <div class="box">
           <h3>رحلة ازميت</h3>
@@ -304,20 +316,30 @@
               سعر الرحلة
             </li>
           </ul>
-          <a href="">للحجز والاستفسار</a>
+          <a href="https://wa.me/+905342081788" target="_blank"
+            >للحجز والاستفسار</a
+          >
         </div>
       </div>
     </div>
     <!-- End travels section -->
     <!-- Start footer  -->
-    <footer>
+    <footer id="contact">
       <div class="container">
-      <div class="icon">  <i class="fa-solid fa-square-phone-flip fa-2xl" style="color: #1fbb6e;"></i></div>
-        <p>أرقام التواصل
-          <p>05342081788</p>
-        </p>
+        <div class="icon">
+          <a href="https://wa.me/+905342081788" target="_blank"
+            ><i
+              class="fa-solid fa-square-phone-flip fa-2xl"
+              style="color: #1fbb6e"
+            ></i
+          ></a>
+        </div>
+        <p>أرقام التواصل</p>
+        <p>05342081788</p>
+
         <p class="copyright">
-          &copy; 2023 <span>Roban Seyidoglu</span> 
+          &copy; 2023 <br />
+          <span>Roban Seyidoglu</span>
         </p>
       </div>
     </footer>
